refactoring New Integer -> Integer.valueOf())